2006-02-01 Perry
 BUG: [ 1419317 ] link error on 8-bit cvs trunk
  Add HtmlHelp.lib to link lines MergeRelease, MergeDebug, MergeUnicodeRelease.
  Src: Merge.dsp
 PATCH: [ 1419582 ] Polish translation update for latest v2.5
  Contributed by dr_prozac
  Src/Languages/Polish: MergePolish.rc

2006-01-31 Tim
 PATCH: [ 1419171 ] Various Updates in German Translation for WinMerge 2.5
  Src/Languages/German: MergeGerman.rc

2006-01-29 Perry
 PATCH: [ 1415895 ] Split cmdline help string into chunks
  Src: Merge.cpp Merge.h Merge.rc MergeArgs.cpp resource.h
  Src/Languages: */*.rc

2006-01-28 Perry
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  InnoSetup\Languages: Italian.isl
 PATCH: [ 1415165 ] Updated Swedish translation for 2.5.3.1+
  Submitted by Hans Eriksson
  Src\Languages\Swedish: MergeSwedish.rc
 PATCH: [ 1414195 ] Delete two old TODO notes
  Src: ChildFrm.cpp
 PATCH: [ 1414196 ] Delete useless CChildFrame::OnNotify method
  Src: ChildFrm.cpp ChildFrm.h
 PATCH: [ 1414199 ] Fix outdated comment on DirView.cpp :: NumToStr
  Src: DirView.cpp

2006-01-26 Kimmo
 PATCH: [ 1413230 ] Use HtmlHelp API to open help
  Src: MainFrm.cpp Merge.dsp

2006-01-25 Perry
 BUG: [ 1412237 ] InitOption return value wrong if RegCreateKey fails
  Fix unused wrong return value of InitOption & improve one comment
  Src/Common: OptionsMgr.cpp
 BUG: [ 1414868 ] Bug in byte_compare (early finish)
  (Also added some comments.)
  Src: DiffWrapper.cpp

2006-01-24 WinMerge experimental release 2.5.3.1 (cvs)

2006-01-23 Kimmo
 PATCH: [ 1406840 ] Use HTMLHelp locally
  Src: MainFrm.cpp
 PATCH: [ 1411727 ] Merge inactive diff when cursor is inside it
  Src: MergeDoc.cpp MergeDoc.h MergeEditView.cpp MergeEditView.h

2006-01-23 Perry
 Add repro files to selftests from 
  BUG [ 1406950 ] QuickCompare vs diffutils, disagree on trailing whitespace
 Current selftests status: Failure count: 9 (of 108)
  Failing -b t002 (all 3 platforms)